--- a/package.json
+++ b/package.json
@@ -26,13 +26,16 @@
     "@angular-devkit/build-angular": "^15.0.5",
     "@angular/cli": "~15.0.5",
     "@angular/compiler-cli": "^15.0.0",
+    "@asymmetrik/ngx-leaflet": "^16.0.1",
     "@types/jasmine": "~4.3.0",
+    "@types/leaflet": "^1.9.3",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "leaflet": "^1.9.4",
     "prettier": "^2.8.8",
     "typescript": "~4.8.2"
   }
