--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@angular/compiler-cli": "^15.0.0",
     "@types/jasmine": "~4.3.0",
     "@types/leaflet": "^1.9.3",
+    "@types/leaflet-draw": "^1.0.6",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
@@ -38,6 +39,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
     "leaflet": "^1.9.4",
+    "leaflet-draw": "^1.0.4",
     "prettier": "^2.8.8",
     "typescript": "~4.8.2"
   }
