--- a/angular.json
+++ b/angular.json
@@ -40,12 +40,14 @@
             "styles": [
               "src/styles.scss",
               "./node_modules/leaflet/dist/leaflet.css",
-              "./node_modules/leaflet-draw/dist/leaflet.draw.css"
+              "./node_modules/leaflet-draw/dist/leaflet.draw.css",
+              "./node_modules/leaflet.markercluster/dist/MarkerCluster.Default.css"
 
             ],
             "scripts": [
               "./node_modules/leaflet/dist/leaflet.js",
-              "./node_modules/leaflet-draw/dist/leaflet.draw.js"
+              "./node_modules/leaflet-draw/dist/leaflet.draw.js",
+              "node_modules/leaflet.markercluster/dist/leaflet.markercluster-src.js"
             ]
           },
           "configurations": {
