--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^15.0.0",
     "leaflet": "^1.9.4",
     "leaflet-draw": "^1.0.4",
+    "leaflet.markercluster": "^1.5.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
@@ -33,6 +34,7 @@
     "@types/jasmine": "~4.3.0",
     "@types/leaflet": "^1.9.3",
     "@types/leaflet-draw": "^1.0.6",
+    "@types/leaflet.markercluster": "^1.5.1",
     "jasmine-core": "~4.5.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
